[package]
name = "lh_mount"
version = "0.1.0"
default-run = "main"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.11.0"
libc = "0.2.103"
log = "0.4.14"
xattr = "0.2.2"
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.68"
signal-hook = { version = "0.3.4", features = ["extended-siginfo"] }
colored = "2.0.0"
shell = { git = "https://github.com/google/rust-shell" }
regex = "1.5.4"
bincode = "1.3.3"
lazy_static = "1.4.0"
chrono = "0.4.19"
dynamic_exec = { path = "dynamic_exec" }

[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "table"
path = "src/table_main.rs"


